@@ -753,7 +753,7 @@ void Fl_Text_Display::overstrike(const char* text) {
   /* determine how many displayed character positions are covered */
   startIndent = mBuffer->count_displayed_characters( lineStart, startPos );
   indent = startIndent;
-  for ( c = text; *c != '\0'; c += fl_utf8len(*c) )
+  for ( c = text; *c != '\0'; c += fl_utf8len1(*c) )
     indent++;
   endIndent = indent;
   
@@ -1735,7 +1735,7 @@ int Fl_Text_Display::handle_vline(
   style = position_style(lineStartPos, lineLen, 0);
   for (i=0; i<lineLen; ) {
     currChar = lineStr[i]; // one byte is enough to handele tabs and other cases
-    int len = fl_utf8len(currChar);
+    int len = fl_utf8len1(currChar);
     if (len<=0) len = 1; // OUCH!
     charStyle = position_style(lineStartPos, lineLen, i);
     if (charStyle!=style || currChar=='\t' || prevChar=='\t') {
@@ -1829,7 +1829,7 @@ int Fl_Text_Display::find_x(const char *s, int len, int style, int x) const {
   // TODO: use binary search which may be quicker.
   int i = 0;
   while (i<len) {
-    int cl = fl_utf8len(s[i]);
+    int cl = fl_utf8len1(s[i]);
     int w = int( string_width(s, i+cl, style) );
     if (w>x) 
       return i;
@@ -3204,7 +3204,7 @@ double Fl_Text_Display::measure_proportional_character(const char *s, int xPix, 
     return (((xPix/tab)+1)*tab) - xPix;
   }
   
-  int charLen = fl_utf8len(*s), style = 0;
+  int charLen = fl_utf8len1(*s), style = 0;
   if (mStyleBuffer) {
     style = mStyleBuffer->byte_at(pos);
   }
@@ -3284,7 +3284,7 @@ int Fl_Text_Display::wrap_uses_character(int lineEndPos) const {
   
   c = buffer()->char_at(lineEndPos);
   return c == '\n' || ((c == '\t' || c == ' ') &&
-                       lineEndPos + fl_utf8len(c) < buffer()->length());
+                       lineEndPos + fl_utf8len1(c) < buffer()->length());
 }
 
 
